# $Id$

Griffith ChangeLog
------------------
(c) 2005-2008  Vasco Nunes, Piotr Ożarowski


2008-08-12  Piotr Ożarowski
	* Don't refresh movie list while updating quick filter combos
	* FDb movie plugin updated (thanks to Bartosz Kurczewski)

2008-08-03  Piotr Ożarowski
	* Initial advanced search/filter function implemented (alpha stage)

2008-08-02  Piotr Ożarowski
	* Use unicode in gettext and SQLAlchemy
	* Move all posters to database, create local cache

2008-07-31  Piotr Ożarowski
	* Replace gdebug with Python's logging module
	* Add posters table (to store posters in database)

2008-07-30  Michael Jahn
	* [#253272] extra information columns not loaded on startup
	* extended debug support on windows platforms

2008-07-28  Piotr Ożarowski
	* Switch back to 4 spaces indentation
	* Rewrite SQLAlchemy related data to use session (to ease accessing simultaneously multiple databases)

---- 0.9.7.1 ---

2008-07-26  Piotr Ożarowski
	* Links to Griffith's homepage and bug tracker updated
	* Version changed to 0.9.7

2008-07-24  Michael Jahn
	* main treeview doesn't accept DB-NULL or empty strings for the int-fields rating, year and runtime

2008-07-24  Michael Jahn
	* Windows only: set_wrap_width doesn't work in filter toolbar without side effects if GTK 2.12.9 is used
	* updated INSTALL file to new versions (GTK, Glade, PyGTK, py2exe, pywin32, Inno Setup)
	* fixed URL creation in setup script; added removing of .pyo files if deinstalled

---- 0.9.7 ---

2008-07-21  Piotr Ożarowski
	* Fixed HTML export plugin (sorting issue)
	* Amazon posters - don't fail if LargeImage attribute is not set
	* Filmweb movie plugin updated (thanks to mariusz2806)
	* Added Latvian translation (thanks to Aleksandrs Zdancuks)
	* Added Ukrainian translation (thanks to vazaz)
	* Updated translations: bg, ca, da, de, el, es, fr, it, nb, pt, pt_BR, ru, sv, tr
	* Version changed to 0.9.7

2008-07-18  Michael Jahn